--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "@prisma/client": "^5.18.0",
     "@radix-ui/react-aspect-ratio": "^1.1.0",
     "@radix-ui/react-avatar": "^1.1.0",
+    "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-radio-group": "^1.2.0",
     "@radix-ui/react-slot": "^1.1.0",
     "axios": "^1.7.5",
     "canvas-confetti": "^1.9.3",
