--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "npx prisma generate"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.0",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.18.0",
     "@radix-ui/react-aspect-ratio": "^1.1.0",
@@ -18,19 +19,23 @@
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-radio-group": "^1.2.0",
+    "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
-    "axios": "^1.7.5",
+    "axios": "^1.7.7",
     "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.0",
+    "cloudinary": "^2.4.0",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.2.0",
     "framer-motion": "^11.3.28",
     "lucide-react": "^0.428.0",
     "next": "14.2.5",
     "next-themes": "^0.3.0",
+    "p-limit": "^6.1.0",
     "prisma": "^5.18.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.53.0",
     "swiper": "^11.1.9",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
